fix: Add APIFY_API_TOKEN env variable

--- a/.github/workflows/lead-automation.yml
+++ b/.github/workflows/lead-automation.yml
@@ -25,6 +25,7 @@ on:
 
 env:
   APIFY_TOKEN: ${{ secrets.APIFY_TOKEN }}
+  APIFY_API_TOKEN: ${{ secrets.APIFY_TOKEN }}
   RESEND_API_KEY: ${{ secrets.RESEND_API_KEY }}
   FROM_EMAIL: ${{ secrets.FROM_EMAIL }}
   FROM_NAME: ${{ secrets.FROM_NAME }}
@@ -114,3 +115,5 @@ jobs:
           path: |
             data/*.json
           retention-days: 30
+
+
